[package]
name = "nes"
version = "0.1.0"
authors = ["Justin Phu <justinqphu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Argument parsing.
clap = "3.0.0-beta.2"

# Some logging.
log = "0.4.11"

# Control log level through environment variables.
env_logger = "0.8.2"

# Simple error handling.
anyhow = "1.0"
